# backend-services-trucks

./: Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  stats.csv
src/: fetch_dataset.py  main.py  prestart.sh
src/bp/: __init__.py  fetch_service.py  truck_service.py
src/data/: __init__.py  domain.py  truck_repository.py
src/di/: providers.py
src/endpoints/: app.py  trucks.py
src/resources/: credentials.json
src/resources/crontabs/: root
